Use chrome's own advertisement counting to decide the max advertisements error

This is a temporary hack until we can rely on bluez's advertisement
error code.

BUG=741056

Change-Id: Ibdc5efe8f3e9b2ab9ca4a2db6be0237480943f49